modificacions de text

--- a/index.html
+++ b/index.html
@@ -618,6 +618,19 @@
             padding-top: 0;
         }
 
+        .speaker-name {
+  font-size: 2rem;
+
+  
+  font-weight: bold;
+}
+
+.speaker-role {
+    font-size: 1.5rem;
+  color: #9747FF;
+  font-style:italic;
+}
+
         .quote-image {
             position: absolute;
             top: -30px;
@@ -668,7 +681,7 @@
             display: block;
             width: 100%;
             height: auto;
-            vertical-align: bottom;
+          
         }
 
         /* Clases para cuando los elementos son visibles */
